--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,7 +23,7 @@
         <hr class="main-p">
 
         <div class="submit-block">
-          <a href="#" class="text-xs-center">
+          <a class="nav-link" routerLink="/apply" routerLinkActive="active" class="text-xs-center">
             <img src="assets/images/submitbutton1-01.png" width="120">
           </a>
         </div>
@@ -34,7 +34,7 @@
 </div>
 
 <div class="container-fluid video-container">
-  <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed/mcZSqWAw3sQ' frameborder='0' allowfullscreen></iframe></div>
+  <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed/cG9sDPJMv7I' frameborder='0' allowfullscreen></iframe></div>
 </div>
 
 <!-- WHY Section -->
@@ -42,7 +42,6 @@
   <div class="container">
     <div class="row">
       <div class="col col-sm-6 text-xs-center">
-        WHY
       </div>
       <div class="col col-sm-6 text-xs-center">
         <div class="">
@@ -191,7 +190,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-6 text-xs-center">
-        <img src="/assets/images/da-logo.jpg" class="img-circle"  width="100px" alt="" />
+        <img src="/assets/images/da-logo.jpg" class="rounded-circle"  width="100px" alt="" />
         <h4>Lorem ipsum dolor</h4>
         <h6>Ut enim ad minim</h6>
         <p>
@@ -199,7 +198,7 @@
         </p>
       </div>
       <div class="col-sm-6 text-xs-center">
-        <img src="/assets/images/da-logo.jpg" class="img-circle"  width="100px" alt="" />
+        <img src="/assets/images/da-logo.jpg" class="rounded-circle"  width="100px" alt="" />
         <h4>Lorem ipsum dolor</h4>
         <h6>Ut enim ad minim</h6>
         <p>
@@ -264,7 +263,7 @@
             Get in touch
           </h2>
           <div>
-            <a href="#" class="submit-button">
+            <a class="nav-link" routerLink="/apply" routerLinkActive="active" class="submit-button">
               <img src="assets/images/submitbutton-large-01.png" width="300">
             </a>
           </div>
