--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,10 +54,10 @@
   </ul>
 </nav>
 
-<div class="collapse navbar-toggleable-sm" id="exCollapsingNavbar"
+<div class="collapse navbar-toggleable-sm hidden-md-up" id="exCollapsingNavbar"
 [collapse]="isCollapsed">
   <div class="bg-inverse text-muted p-1">
-    <ul class="nav navbar-nav float-sm-right">
+    <ul class="nav navbar-nav float-sm-right ">
       <li class="nav-item">
         <a class="nav-link" href="https://dreamaction.co/">Blog</a>
       </li>
