--- a/src/app/da-form/da-form.component.html
+++ b/src/app/da-form/da-form.component.html
@@ -1,93 +1,100 @@
 <!-- show register form -->
 <div *ngIf="!isRegistered">
-  <div class="jumbotron jumbotron-fluid">
+  <div class="container-fluid da-form-container">
     <div class="container">
-      <h1 class="display-3">Portfolio Review Application</h1>
-      <p class="lead">ใบสมัคร Portfolio Review - กรุณากรอกแบบฟอร์มด้านล่างเลยค่ะ เพื่อ เข้า....</p>
-    </div>
-  </div>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-lg-3"></div>
-      <div class="col-lg-6">
-        <form [formGroup]="participantForm" (ngSubmit)="onSubmit(participantForm.value)">
-          <div class="form-group"
-              [ngClass]="{'has-danger':!participantForm.controls['fullName'].valid && participantForm.controls['fullName'].touched}">
-            <label class="form-control-label" for="fullName">ชื่อ-นามสกุล</label>
-            <input type="text" [formControl]="participantForm.controls['fullName']"
-                   name="full-name"
-                   class="form-control"
-                   [ngClass]="{'form-control-danger':!participantForm.controls['fullName'].valid && participantForm.controls['fullName'].touched}"
-                   id="full-name" required>
-            <small id="fullNameHelp" class="form-text text-muted">ชื่อและนามสกุลจริงเป็นภาษาไทย</small>
+      <div class="row da-form-header-row">
+        <div class="col-xs-12 text-xs-center">
+          <h1 class="h2">Signup for Portfolio Review</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-3 hidden-md-down"></div>
+        <div class="col-lg-6 white-bg text-xs-center da-form-subheader">
+          <p class="lead">กรุณากรอกแบบฟอร์มด้านล่างเลยค่ะ </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-3 hidden-md-down"></div>
+        <div class="col-lg-6 white-bg da-form-form">
+          <form [formGroup]="participantForm" (ngSubmit)="onSubmit(participantForm.value)">
+            <div class="form-group"
+                [ngClass]="{'has-danger':!participantForm.controls['fullName'].valid && participantForm.controls['fullName'].touched}">
+              <label class="form-control-label" for="fullName">ชื่อ-นามสกุล</label>
+              <input type="text" [formControl]="participantForm.controls['fullName']"
+                     name="full-name"
+                     class="form-control"
+                     [ngClass]="{'form-control-danger':!participantForm.controls['fullName'].valid && participantForm.controls['fullName'].touched}"
+                     id="full-name" required>
+              <small id="fullNameHelp" class="form-text text-muted">ชื่อและนามสกุลจริงเป็นภาษาไทย</small>
 
-            <small *ngIf="participantForm.controls['fullName'].hasError('required') && participantForm.controls['fullName'].touched" class="form-text alert-danger">ต้องใส่ชื่อ-นามสกุล</small>
-          </div>
+              <small *ngIf="participantForm.controls['fullName'].hasError('required') && participantForm.controls['fullName'].touched" class="form-text alert-danger">ต้องใส่ชื่อ-นามสกุล</small>
+            </div>
 
-          <div class="form-group"
-              [ngClass]="{'has-danger':!participantForm.controls['nickName'].valid && participantForm.controls['nickName'].touched}">
-            <label class="form-control-label" for="nickName">ชื่อเล่น</label>
-            <input type="text" [formControl]="participantForm.controls['nickName']"
-                   name="nick-name"
-                   class="form-control"
-                   [ngClass]="{'form-control-danger':!participantForm.controls['nickName'].valid && participantForm.controls['nickName'].touched}"
-                   id="nick-name" required>
+            <div class="form-group"
+                [ngClass]="{'has-danger':!participantForm.controls['nickName'].valid && participantForm.controls['nickName'].touched}">
+              <label class="form-control-label" for="nickName">ชื่อเล่น</label>
+              <input type="text" [formControl]="participantForm.controls['nickName']"
+                     name="nick-name"
+                     class="form-control"
+                     [ngClass]="{'form-control-danger':!participantForm.controls['nickName'].valid && participantForm.controls['nickName'].touched}"
+                     id="nick-name" required>
 
-           <small *ngIf="participantForm.controls['nickName'].hasError('required') && participantForm.controls['nickName'].touched" class="form-text alert-danger">ต้องใส่ชื่อ-นามสกุล</small>
-          </div>
+             <small *ngIf="participantForm.controls['nickName'].hasError('required') && participantForm.controls['nickName'].touched" class="form-text alert-danger">ต้องใส่ชื่อ-นามสกุล</small>
+            </div>
 
-          <div class="form-group" [ngClass]="{'has-danger':!participantForm.controls['age'].valid && participantForm.controls['age'].touched}">
-            <label class="form-control-label" for="age">อายุ</label>
-            <input type="number" [formControl]="participantForm.controls['age']" name="age" class="form-control" id="age" required>
-          </div>
+            <div class="form-group" [ngClass]="{'has-danger':!participantForm.controls['age'].valid && participantForm.controls['age'].touched}">
+              <label class="form-control-label" for="age">อายุ</label>
+              <input type="number" [formControl]="participantForm.controls['age']" name="age" class="form-control" id="age" required>
+            </div>
 
-          <div class="form-group" [ngClass]="{'has-danger':!participantForm.controls['email'].valid && participantForm.controls['email'].touched}">
-            <label class="form-control-label" for="email">Email address</label>
-            <input type="email" class="form-control" [formControl]="participantForm.controls['email']" name="email" class="form-control" id="email" aria-describedby="emailHelp" required>
-            <small id="emailHelp" class="form-text text-muted">ทางเราจะไม่แชร์ email ของคุณกับใครแน่นอนค่ะ</small>
-          </div>
+            <div class="form-group" [ngClass]="{'has-danger':!participantForm.controls['email'].valid && participantForm.controls['email'].touched}">
+              <label class="form-control-label" for="email">Email address</label>
+              <input type="email" class="form-control" [formControl]="participantForm.controls['email']" name="email" class="form-control" id="email" aria-describedby="emailHelp" required>
+              <small id="emailHelp" class="form-text text-muted">ทางเราจะไม่แชร์ email ของคุณกับใครแน่นอนค่ะ</small>
+            </div>
 
-          <div class="form-group" [ngClass]="{'has-danger':!participantForm.controls['occupation'].valid && participantForm.controls['occupation'].touched}">
-            <label class="form-control-label" for="occupation">อาชีพ</label>
-            <input type="text" [formControl]="participantForm.controls['occupation']" name="occupation" class="form-control" id="occupation" required>
-            <small id="occupationHelp" class="form-text text-muted">ถ้าเรียนอยู่ให้ลงชั้นปี ชื่อโรงเรียน/มหาวิทยาลัย</small>
-          </div>
+            <div class="form-group" [ngClass]="{'has-danger':!participantForm.controls['occupation'].valid && participantForm.controls['occupation'].touched}">
+              <label class="form-control-label" for="occupation">อาชีพ</label>
+              <input type="text" [formControl]="participantForm.controls['occupation']" name="occupation" class="form-control" id="occupation" required>
+              <small id="occupationHelp" class="form-text text-muted">ถ้าเรียนอยู่ให้ลงชั้นปี ชื่อโรงเรียน/มหาวิทยาลัย</small>
+            </div>
 
-          <div class="form-group" [ngClass]="{'has-danger':!participantForm.controls['workplace'].valid && participantForm.controls['workplace'].touched}">
-            <label class="form-control-label" for="workplace">ที่ทำงาน หรือ โรงเรียน</label>
-            <input type="text" [formControl]="participantForm.controls['workplace']" name="workplace" class="form-control" id="workplace" required>
-          </div>
+            <div class="form-group" [ngClass]="{'has-danger':!participantForm.controls['workplace'].valid && participantForm.controls['workplace'].touched}">
+              <label class="form-control-label" for="workplace">ที่ทำงาน หรือ โรงเรียน</label>
+              <input type="text" [formControl]="participantForm.controls['workplace']" name="workplace" class="form-control" id="workplace" required>
+            </div>
 
 
-          <div class="form-group" [ngClass]="{'has-danger':!participantForm.controls['purpose'].valid && participantForm.controls['purpose'].touched}">
-            <label class="form-control-label" for="purpose">เหตุผลที่อยากจะส่ง Portfolio Review</label>
-            <select class="form-control" [formControl]="participantForm.controls['purpose']" name="purpose" id="purpose" required>
-              <option value="" selected disabled>Choose Here</option>
-              <option value="school">เพื่อเอาไปเรียนต่อ</option>
-              <option value="work">เพื่อเอาไปสมัครงาน</option>
-            </select>
-          </div>
+            <div class="form-group" [ngClass]="{'has-danger':!participantForm.controls['purpose'].valid && participantForm.controls['purpose'].touched}">
+              <label class="form-control-label" for="purpose">เหตุผลที่อยากจะส่ง Portfolio Review</label>
+              <select class="form-control" [formControl]="participantForm.controls['purpose']" name="purpose" id="purpose" required>
+                <option value="" selected disabled>Choose Here</option>
+                <option value="school">เพื่อเอาไปเรียนต่อ</option>
+                <option value="work">เพื่อเอาไปสมัครงาน</option>
+              </select>
+            </div>
 
-          <div class="form-group" [ngClass]="{'has-danger':!participantForm.controls['portfolioFileSize'].valid && participantForm.controls['portfolioFileSize'].touched}">
-            <label class="form-control-label" for="file">Upload Portfolio ของคุณที่นี่</label>
-            <input type="file" accept="application/pdf" (change)="fileChangeEvent($event)" name="file" class="form-control-file" id="file" required>
-            <small id="fileHelp" class="form-text text-muted">File Portfolio ต้องเป็น File PDF และมีขนาดไม่เกิน 20Mb เท่านั้น</small>
+            <div class="form-group" [ngClass]="{'has-danger':!participantForm.controls['portfolioFileSize'].valid && participantForm.controls['portfolioFileSize'].touched}">
+              <label class="form-control-label" for="file">Upload Portfolio ของคุณที่นี่</label>
+              <input type="file" accept="application/pdf" (change)="fileChangeEvent($event)" name="file" class="form-control-file" id="file" required>
+              <small id="fileHelp" class="form-text text-muted">File Portfolio ต้องเป็น File PDF และมีขนาดไม่เกิน 20Mb เท่านั้น</small>
 
-            <small *ngIf="participantForm.controls['portfolioFileSize'].hasError('max') && participantForm.controls['portfolioFileSize'].touched" class="form-text alert-danger">File มีขนาดเกิน 20Mb</small>
-          </div>
+              <small *ngIf="participantForm.controls['portfolioFileSize'].hasError('max') && participantForm.controls['portfolioFileSize'].touched" class="form-text alert-danger">File มีขนาดเกิน 20Mb</small>
+            </div>
 
-          <re-captcha (captchaResponse)="handleCorrectCaptcha($event)"
-                      (captchaExpired)="handleExpired($event)"
-                      site_key="6Ld2_BwTAAAAAHfkcisT0TEkCcICmhnq99ev1xLR"></re-captcha>
+            <re-captcha (captchaResponse)="handleCorrectCaptcha($event)"
+                        (captchaExpired)="handleExpired($event)"
+                        site_key="6Ld2_BwTAAAAAHfkcisT0TEkCcICmhnq99ev1xLR"></re-captcha>
 
-          <br>
-          <button type="submit"
-                  class="btn btn-primary"
-                  [disabled]="!participantForm.valid || submitting">
-                  Submit</button>
-          <small id="fileHelp" class="form-text text-muted">
-            By submitting your information, you agree to our terms and conditions <a>read more</a></small>
-        </form>
+            <br>
+            <button type="submit"
+                    class="btn btn-primary"
+                    [disabled]="!participantForm.valid || submitting">
+                    Submit</button>
+            <small id="fileHelp" class="form-text text-muted">
+              By submitting your information, you agree to our terms and conditions <a>read more</a></small>
+          </form>
+        </div>
       </div>
     </div>
   </div>
@@ -95,10 +102,30 @@
 
 <!-- show thank you page -->
 <div *ngIf="isRegistered">
-  <div class="jumbotron jumbotron-fluid">
-    <div class="container">
-      <h1 class="display-3">ทางDreamAction ได้รับ Portfolio ของคุณแล้ว</h1>
-      <p class="lead">ผลประกาศทุกวันที่ 13 ทาง Dreamaction.co</p>
+  <div class="container-fluid">
+    <div class="row da-form-header-row confirm-row">
+      <div class="col col-xs-12 text-xs-center">
+        <div class="">
+          <h1 class="display-1 hidden-xs-down">Submitted!</h1>
+          <h1 class="display-3 hidden-sm-up">Submitted!</h1>
+          <p class="h4">
+            ได้รับ Portfolio ของคุณแล้ว
+          </p>
+          <p class="lead">
+            กรุณายืนยัน E-mail ของคุณเพื่อเข้าร่วมกิจกรรม “ลุ้นรับฟรี Monthly Give-away : Portfolio Review 1เดือน 1Review”
+          </p>
+          <p>
+            * ประกาศผลผู้โชคดีทุกวันที่ 13 ของทุกเดือน
+          </p>
+            <p class="small">
+              ** ทางระบบจะทำการเก็บข้อมูลของคุณไว้ 3 เดือน หากต้องการส่งสมัครใหม่ ก็จะเป็นในอีก 3 เดือนข้างหน้า นับจากวันนี้ค่ะ
+            </p>
+
+            <p class="small">
+              *** หากต้องการได้รับการรีวิวโดยไม่ต้องการจับสลาก และ รีวิวเป็นการส่วนตัว โดยไม่เผยแพร่ในรูปบทความ สู่พื้นที่สาธารณะสามารถติดต่อ จะต้องมีการเสียค่าบริการ ติดต่อขอรับข้อมูลเพิ่มเติมได้ที่ <a href="mailto:jom@dreamaction.co">jom@dreamaction.co</a> หรือ FB inbox <a href="http://m.me/godreamaction">http://m.me/godreamaction</a>
+            </p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
