added more content..

--- a/src/app/da-form/da-form.component.html
+++ b/src/app/da-form/da-form.component.html
@@ -122,7 +122,7 @@
             </p>
 
             <p class="small">
-              *** หากต้องการได้รับการรีวิวโดยไม่ต้องการจับสลาก และ รีวิวเป็นการส่วนตัว โดยไม่เผยแพร่ในรูปบทความ สู่พื้นที่สาธารณะสามารถติดต่อ จะต้องมีการเสียค่าบริการ ติดต่อขอรับข้อมูลเพิ่มเติมได้ที่ <a href="mailto:jom@dreamaction.co">jom@dreamaction.co</a> หรือ FB inbox <a href="http://m.me/godreamaction">http://m.me/godreamaction</a>
+              *** หากต้องการได้รับการรีวิวโดยไม่ต้องรอลุ้นติดต่อขอรับข้อมูลเพิ่มเติมได้ที่ <a href="mailto:jom@dreamaction.co">jom@dreamaction.co</a> หรือ FB inbox <a href="http://m.me/godreamaction" target="_blank">http://m.me/godreamaction</a>
             </p>
         </div>
       </div>
@@ -143,8 +143,8 @@
     <div class="modal-content">
       <div class="modal-body">
         <div class="loader">Loading...</div>
-        <h4 class="modal-title text-xs-center">Uploading Your Portfolio</h4>
-        <p class="text-xs-center">Please wait... we are uploading your portfolio to the server.</p>
+        <h4 class="modal-title text-xs-center">กำลัง Upload Portfolio ของคุณอยู่...</h4>
+        <p class="text-xs-center">กรุณารอสักครู่... ทางเรากำลัง Upload Portfolio ของคุณเข้าสู่ระบบอยู่</p>
       </div>
     </div>
   </div>
