--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -138,9 +138,8 @@
   <div class="row">
     <div class="col col-xs-12 video-container">
       <video autoplay poster="posterimage.jpg" muted loop>
-        <source src="/assets/videos/videoplayback.mp4" type="video/mp4">
-        <source src="/assets/videos/videoplayback.mp4" type="video/mp4">
-        <source src="/assets/videos/videoplayback.mp4" type="video/mp4">
+        <source src="/assets/videos/cut.mp4" type="video/mp4">
+        <source src="/assets/videos/cut.webm" type="video/webm">
       </video>
 
       <div class="container-fluid video-section">
