change text color in what-section

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -60,6 +60,10 @@ a {
   font-weight: 200;
 }
 
+.what-section p {
+  color:#989898;
+}
+
 .what-section .what-header-row {
   padding-bottom: 0px;
 }
