--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -137,8 +137,8 @@
 <div class="container-fluid video-section text">
   <div class="row">
     <div class="col col-xs-12 video-container">
-      <video autoplay poster="/assets/images/poster.jpg" muted loop>
-        <source src="/assets/videos/cut.mp4" type="video/mp4">
+      <video autoplay muted loop preload="none" >
+        <!-- <source src="/assets/videos/cut.mp4" type="video/mp4"> -->
         <source src="/assets/videos/cut.webm" type="video/webm">
       </video>
 
