--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -118,8 +118,11 @@ video {
   min-height: 100vh;
   width: auto;
   height: auto;
-  background-color: black;
+  background-color: white;
   z-index: -1000;
+  background-image: url(/assets/images/poster.png);
+  background-size: cover;
+  background-position: center center;
 }
 
 .text {
