--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -137,22 +137,21 @@
 <div class="container-fluid video-section text">
   <div class="row">
     <div class="col col-xs-12 video-container">
-      <video autoplay muted loop preload="none" >
-        <!-- <source src="/assets/videos/cut.mp4" type="video/mp4"> -->
+      <video autoplay muted loop preload="none">
+        <source src="/assets/videos/cut.mp4" type="video/mp4">
         <source src="/assets/videos/cut.webm" type="video/webm">
       </video>
 
       <div class="container-fluid video-section">
         <div class="row">
           <div class="col-lg-3"></div>
-          <div class="col col-lg-6 text-sm-center">
+          <div class="col col-lg-6 text-xs-center">
             <div>
-              <h2>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+              <h2 class="display-4">
+                Your Portfolio Review from an Expert. Wanna try?
               </h2>
-              <p>
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              <p class="lead">
+                ส่งมารีวิว พร้อมเรียนรู้แนวทางในการพัฒนาต่อ จากผู้เชี่ยวชาญอยากลองไหมล่ะ?
               </p>
 
               <div class="submit-block">
@@ -298,18 +297,21 @@
 
 <!-- submit section -->
 <div class="container-fluid submit-section">
-  <div class="container">
-    <div class="row">
-      <div class="col col-xs-12 text-xs-center">
-        <div>
-          <h2 class="display-1">
-            Get in touch
-          </h2>
-          <div>
-            <a class="nav-link" routerLink="/apply" routerLinkActive="active" class="submit-button">
-              <img src="assets/images/submitbutton-large-01.png" width="300">
-            </a>
-          </div>
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col col-md-6 text-xs-center">
+      <div>
+        <h2 class="display-4">
+          Ready for the advancement?
+        </h2>
+        <p class="lead">
+          พร้อมจะพัฒนาไปอีกขั้น?
+        </p>
+
+        <div class="submit-block">
+          <a class="nav-link" routerLink="/apply" routerLinkActive="active" class="text-xs-center">
+            <button type="button" class="btn btn-primary">Apply</button>
+          </a>
         </div>
       </div>
     </div>
