--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,7 +11,7 @@
             1 Month 1 Portfolio Review
           </p>
           <p>
-            Review Portfolio อย่างละเอียดฟรีไม่มีค่าใช้จ่าย โดยสถาปนิก ผู้ชำนาญในการทำ Portfolio ที่จะช่วยพัฒนา Portfolio ของคุณให้เจ๋งและโดดเด่นกว่าคนอ่ืนเพื่อเอาไปคว้างานหรือโรงเรียนในฝัน
+            Review Portfolio อย่างละเอียดฟรีไม่มีค่าใช้จ่าย โดยสถาปนิก ผู้ชำนาญในการทำ Portfolio ที่จะช่วยพัฒนา Portfolio ของคุณให้เจ๋งและโดดเด่นกว่าคนอื่นเพื่อเอาไปคว้างานหรือโรงเรียนในฝัน
           </p>
 
           <div class="submit-block">
