add thai translation

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -103,7 +103,10 @@
 
           <p class="lead">
             get into school or get a job with their portfolio
-            Other 10% using their connection or other factors
+          </p>
+
+          <p>
+            90% ของนักออกแบบได้งานหรือได้เข้าเรียนด้วย Portfolio ของเค้า
           </p>
         </div>
       </div>
@@ -126,6 +129,9 @@
 
           <p class="lead">
             excel their portfolio to the fullest that go beyond good but great
+          </p>
+          <p>
+            มีเพียง 15% เท่านั้นที่คอยพัฒนา Portfolio ของเค้าให้ดีกว่าเดิม
           </p>
         </div>
       </div>
@@ -156,7 +162,7 @@
 
               <div class="submit-block">
                 <a class="nav-link" routerLink="/apply" routerLinkActive="active" class="text-xs-center">
-                  <button type="button" class="btn btn-primary">Apply</button>
+                  <button type="button" class="btn btn-primary btn-lg">Apply</button>
                 </a>
               </div>
             </div>
@@ -310,7 +316,7 @@
 
         <div class="submit-block">
           <a class="nav-link" routerLink="/apply" routerLinkActive="active" class="text-xs-center">
-            <button type="button" class="btn btn-primary">Apply</button>
+            <button type="button" class="btn btn-primary btn-lg">Apply</button>
           </a>
         </div>
       </div>
