--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -245,55 +245,51 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <h2>
-          รายละเอียดเพิ่มเติม
-        </h2>
+        <h4>
+          ขั้นตอนการสมัคร
+        </h4>
+
         <ul>
-          <h4>
-            ขั้นตอนการสมัคร
-          </h4>
-          <ul>
-            <li>
-              กรอกใบสมัคร <a class="nav-link" routerLink="/apply">Portfolio Review</a> และทำการ Upload ไฟล์ Portfolio ในหน้าเดียวกัน
-            </li>
-            <br>
-            <li>
-              ไฟล์ Portfolio ที่ส่งมา ต้องเป็นไฟล์ PDF format เท่านั้น โดยมีขนาดไม่เกิน 20 Mb
-              *ไม่รับไฟล์ชนิดอื่นเช่น JPG, PNG ไฟล์ทีสมัครมา ต้องมาเป็นรูปเล่มพร้อม Flip เปิดดูได้เช่นในกรณีที่ส่งไปสมัครงานจริง
-            </li>
-            <br>
-            <li>
-              กรุณาเข้าไปเช็คอีเมลของคุณและกดยืนยัน
-            </li>
-            <br>
-            <li>
-              คุณจะได้รับ อีเมลตอบกลับว่าการสมัครสำเร็จเป็นที่เรียบร้อย และข้อมูลของคุณได้เข้าสู่ระบบแล้ว
-            </li>
-            <br>
-            <li>
-              รอติดตามผลการจับรางวัล ทุกวันที่ 13 ของทุกเดือน ได้ทาง <a href="https://www.facebook.com/godreamaction">facebook</a> หรือ <a href="https://dreamaction.co/">DreamAction</a>
-            </li>
-          </ul>
+          <li>
+            กรอกใบสมัคร <a class="nav-link" routerLink="/apply">Portfolio Review</a> และทำการ Upload ไฟล์ Portfolio ในหน้าเดียวกัน
+          </li>
           <br>
-          <h4>
-            อื่นๆ
-          </h4>
-          <ul>
-            <li>
-              ทางระบบ จะเก็บข้อมูลของคุณไว้ 3 เดือน แปลว่า ในการสมัครหนึ่งครั้ง หากคุณพลาดโอกาสในเดือนแรกที่คุณส่ง ผลงานของคุณจะยังอยู่ในระบบ เพื่อทำการจับสลากได้อีก 2 ครั้ง หลังจากนั้น หากคุณสนใจสมัครเข้ามาอีกครั้ง จะต้องทำการสมัครพร้อมส่ง Portfolio มาใหม่
-              ทาง DreamAction จะทำการลบข้อมูลของคุณออกจากระบบทุก 3 เดือน
-            </li>
+          <li>
+            ไฟล์ Portfolio ที่ส่งมา ต้องเป็นไฟล์ PDF format เท่านั้น โดยมีขนาดไม่เกิน 20 Mb
+            *ไม่รับไฟล์ชนิดอื่นเช่น JPG, PNG ไฟล์ทีสมัครมา ต้องมาเป็นรูปเล่มพร้อม Flip เปิดดูได้เช่นในกรณีที่ส่งไปสมัครงานจริง
+          </li>
+          <br>
+          <li>
+            กรุณาเข้าไปเช็คอีเมลของคุณและกดยืนยัน
+          </li>
+          <br>
+          <li>
+            คุณจะได้รับ อีเมลตอบกลับว่าการสมัครสำเร็จเป็นที่เรียบร้อย และข้อมูลของคุณได้เข้าสู่ระบบแล้ว
+          </li>
+          <br>
+          <li>
+            รอติดตามผลการจับรางวัล ทุกวันที่ 13 ของทุกเดือน ได้ทาง <a href="https://www.facebook.com/godreamaction">facebook</a> หรือ <a href="https://dreamaction.co/">DreamAction</a>
+          </li>
+        </ul>
+        <br>
+        <h4>
+          ข้อมูลเพิ่มเติม
+        </h4>
+        <ul>
+          <li>
+            ทางระบบ จะเก็บข้อมูลของคุณไว้ 3 เดือน แปลว่า ในการสมัครหนึ่งครั้ง หากคุณพลาดโอกาสในเดือนแรกที่คุณส่ง ผลงานของคุณจะยังอยู่ในระบบ เพื่อทำการจับสลากได้อีก 2 ครั้ง หลังจากนั้น หากคุณสนใจสมัครเข้ามาอีกครั้ง จะต้องทำการสมัครพร้อมส่ง Portfolio มาใหม่
+            ทาง DreamAction จะทำการลบข้อมูลของคุณออกจากระบบทุก 3 เดือน
+          </li>
+          <br>
+          <li>
+            <b>ทำไมแค่ 3 เดือน?</b>
             <br>
-            <li>
-              ทำไมแค่ 3 เดือน?
-              <br>
-              Portfolio ควรและอาจจะมีการอัพเดทในระยะ 3 เดือน ทางเราจึงไม่มีความจำเป็นจะต้องเก็บไว้เกิน ระยะเวลาดังกล่าว เพราะเราต้องการ Review เวอชั่นล่าสุดของ Portfolio คุณเท่านั้น ทั้งนี้ทาง DreamAction คิดว่า ระยะเวลา 3 เดือนเป็นช่วงเวลามีความเหมาะสมต่อการพัฒนา Portfolioของคุณ
-            </li>
-            <br>
-            <li>
-              หากต้องการได้รับการรีวิวโดยไม่ต้องรอลุ้นติดต่อขอรับข้อมูลเพิ่มเติมได้ที่ <a href="mailto:jom@dreamaction.co">jom@dreamaction.co</a> หรือ FB inbox <a href="http://m.me/godreamaction" target="_blank">http://m.me/godreamaction</a>
-            </li>
-          </ul>
+            Portfolio ควรและอาจจะมีการอัพเดทในระยะ 3 เดือน ทางเราจึงไม่มีความจำเป็นจะต้องเก็บไว้เกิน ระยะเวลาดังกล่าว เพราะเราต้องการ Review เวอชั่นล่าสุดของ Portfolio คุณเท่านั้น ทั้งนี้ทาง DreamAction คิดว่า ระยะเวลา 3 เดือนเป็นช่วงเวลามีความเหมาะสมต่อการพัฒนา Portfolioของคุณ
+          </li>
+          <br>
+          <li>
+            หากต้องการได้รับการรีวิวโดยไม่ต้องรอลุ้นติดต่อขอรับข้อมูลเพิ่มเติมได้ที่ <a href="mailto:jom@dreamaction.co">jom@dreamaction.co</a> หรือ FB inbox <a href="http://m.me/godreamaction" target="_blank">http://m.me/godreamaction</a>
+          </li>
         </ul>
       </div>
     </div>
