added fb twitter

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -157,7 +157,7 @@
                 Your Portfolio Review from an Expert. Wanna try?
               </h2>
               <p class="lead">
-                ส่งมารีวิว พร้อมเรียนรู้แนวทางในการพัฒนาต่อ จากผู้เชี่ยวชาญอยากลองไหมล่ะ?
+                ส่งมารีวิว พร้อมเรียนรู้แนวทางในการพัฒนาต่อ จากผู้เชี่ยวชาญ อยากลองไหมล่ะ?
               </p>
 
               <div class="submit-block">
@@ -307,7 +307,7 @@
           Ready for the advancement?
         </h2>
         <p class="lead">
-          พร้อมจะพัฒนาไปอีกขั้น?
+          พร้อมจะพัฒนาไปอีกขั้นหรือยัง?
         </p>
 
         <div class="submit-block">
