--- a/src/app/da-form/da-form.component.html
+++ b/src/app/da-form/da-form.component.html
@@ -92,7 +92,9 @@
                     [disabled]="!participantForm.valid || submitting">
                     Submit</button>
             <small id="fileHelp" class="form-text text-muted">
-              By submitting your information, you agree to our terms and conditions <a>read more</a></small>
+              เมื่อทำการกด Submit ส่งข้อมูลของคุณ นั้นแปลว่าคุณตกลงยินยอมและเข้าใจ
+              <a routerLink="/termsconditions" routerLinkActive="active">ข้อกำหนดและเงื่อนไข</a>
+            </small>
           </form>
         </div>
       </div>
