--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,7 +11,7 @@
             1 Month 1 Portfolio Review
           </p>
           <p>
-            Review Portfolio อย่างละเอียดฟรีไม่มีค่าใช้จ่าย โดยสถาปนิก ผู้ชำนาญในการทำ Portfolio ที่จะช่วยพัฒนา Portfolio ของคุณให้เจ๋งและโดดเด่นกว่าคนอื่นเพื่อเอาไปคว้างานหรือโรงเรียนในฝัน
+            รีวิว Portfolio อย่างละเอียด เดือนละ 1 คน ฟรี! ไม่มีค่าใช้จ่าย โดยนักออกแบบ/สถาปนิก ผู้ชำนาญในการทำและคัดเลือก Portfolioในสายสถาปัตย์ ที่จะช่วยพัฒนา Portfolio ของคุณให้เจ๋ง และโดดเด่นกว่าคนอื่น เพื่อเอาไปคว้างานหรือโรงเรียนในฝัน
           </p>
 
           <div class="submit-block">
@@ -260,7 +260,11 @@
           </li>
           <br>
           <li>
-            กรุณาเข้าไปเช็คอีเมลของคุณและกดยืนยัน
+            กรุณาอ่าน “ข้อกำหนดและเงื่อนไข (Terms and Conditions)” ในหน้าใบสมัครให้ละเอียด
+          </li>
+          <br>
+          <li>
+            กรุณาเข้าไปเช็คอีเมลของคุณและกดยืนยัน (ต้องเข้าไปกดในอีเมลของคุณเอง)
           </li>
           <br>
           <li>
@@ -269,6 +273,19 @@
           <br>
           <li>
             รอติดตามผลการจับรางวัล ทุกวันที่ 13 ของทุกเดือน ได้ทาง <a href="https://www.facebook.com/godreamaction">facebook</a> หรือ <a href="https://dreamaction.co/">DreamAction</a>
+          </li>
+        </ul>
+        <br>
+        <h4>
+          การแสดงผลการรีวิว
+        </h4>
+        <ul>
+          <li>
+            หากคุณได้รับการรีวิว ผลงานของคุณจะทำการรีวิวเป็น 1 บทความ ที่คุณสามารถติดตามได้ทาง <a href="https://www.facebook.com/godreamaction">facebook</a> หรือ <a href="https://dreamaction.co/">DreamAction</a> โดยตรง
+          </li>
+          <br>
+          <li>
+            การแสดงผลการรีวิวจะมี DA Portfolio Review Metric, Performance Score และ ทำการ Redline ลงบนไฟล์ PDF ของคุณ
           </li>
         </ul>
         <br>
