--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,3 +1,12 @@
-<p>
-  page-not-found works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 text-xs-center">
+      <h1 class="display-1">
+        404
+      </h1>
+      <h2 class="display-3">
+        Page Not Found
+      </h2>
+    </div>
+  </div>
+</div>
