--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -18,7 +18,6 @@
         Log In
       </button>
 
-
     </div>
   </div>
 </div>
@@ -52,12 +51,11 @@
             </p>
 
             <p>
-              File : <a [href]="user.portfolioPath">download</a>
-            </p>
-
-            <p>
               Time : {{ user.time | date:'medium'}}
             </p>
+            <button type="button" class="btn btn-secondary" (click)="getFileURL(user.portfolioPath)">
+              view portfolio
+            </button>
         </li>
       </ul>
 
