--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -184,7 +184,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-4 text-xs-center">
+      <div class="col-md-6 text-xs-center">
         <img src="/assets/images/jump.jpeg" class="rounded-circle"  width="100px" alt="" />
         <br>
         <br>
@@ -203,7 +203,7 @@
           อย่างที่สามคือ การพัฒนาตนเอง จากตอนแรกที่เรานั่งทำพอร์ทเองคนเดียวทำให้เราไม่รู้ว่าเรายังสามารถพัฒนาพอร์ทได้มากขนาดไหน บางทีก็รู้สึกท้อเพราะว่างานไม่สวยแล้วจะทำให้มันสวยได้ยังไง แต่พอได้คำปรึกษาแล้วทำให้เราพัฒนาตัวเองข้ามขีดจำกัดของตัวเองได้ ถ้ามองย้อนกลับไป จริงๆแล้วเราทุกคนสามารถพัฒนาตัวเองได้อีกเยอะเลยแต่เราแค่ได้แต่คิดอย่างเดียวแต่ไม่ลองลงมือทำ จากการที่ได้รู้จักกับพี่จอม ทำให้เราได้รับความรู้แล้วก็แนวความคิดมากมาย พี่จอมให้คำปรึกษาที่สามารถนำมาประยุกต์ได้เข้าใจง่ายแล้วก็ให้เวลาเต็มที่มากๆ การคุยทุกครั้งจะเกินเวลาที่เรากำหนดไปเยอะมากๆ สุดท้ายต้องขอบคุณพี่จอมจริงๆที่ช่วยให้คำปรึกษามาตลอด ทั้งๆที่จบคอร์สแล้วก็ยังแนะนำที่ๆจะสมัครงานแล้วก็ช่วยดูจดหมายสมัครงานให้ด้วย จากตอนแรกที่ไม่คิดว่าตัวเองจะได้บริษัทที่ดังๆเลย แต่ตอนนี้เราได้งานที่เราอยากทำ ซึ่งเป็นบริษัทที่คุยกับพี่จอมตั้งแต่แรกว่าอยากจะได้ที่นี่ การเข้าคอร์สนี้ถือว่าเป็นการตัดสินใจที่ถูกมากๆสำหรับเราเพราะการนั่งทำพอร์ทคนเดียวมันทำให้งานมันไม่พัฒนาขึ้นเลยแต่พอมีพี่จอมที่เค้ามีประสบการณ์ด้านนี้โดยตรงมันทำให้เรารู้ว่างานของเราและตัวเราเองสามารถพัฒนาข้ามขีดจำกัดของตัวเองได้จริงๆ แล้วที่สำคัญคือเราไม่ท้อ เพราะมีพี่จอมที่คอยเป็นที่ปรึกษาให้ตลอดเวลาเลย :)
         </p>
       </div>
-      <div class="col-md-4 text-xs-center">
+      <div class="col-md-6 text-xs-center">
         <img src="/assets/images/qiaochen.jpg" class="rounded-circle"  width="100px" alt="" />
         <br>
         <br>
@@ -220,7 +220,7 @@
         </p>
       </div>
 
-      <div class="col-md-4 text-xs-center">
+      <!-- <div class="col-md-4 text-xs-center">
         <img src="/assets/images/aui.jpg" class="rounded-circle"  width="100px" alt="" />
         <br>
         <br>
@@ -236,7 +236,7 @@
           I'm having an evolutionary growth with Jom's guide. From graphic styles to ways of thinking, I'm learning from this role model.
           Thanks for the Portfolio sessions, I improved the graphic consistency and clarified ideas' illustration in my portfolio. My work efficiency, also, get increased after gaining a better understanding about project management from her. We contacted via email, phones and face-to-face meetings to compromise our tight schedules. In respect to her dedications, I can do nothing but keep going forward, carrying out all I learn through my practice.
         </p>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
