--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -106,7 +106,7 @@
           </p>
 
           <p>
-            90% ของนักออกแบบได้งานหรือได้เข้าเรียนด้วย Portfolio ของเค้า
+            90% ของนักออกแบบ ใช้ Portfolioของตัวเอง ในการได้รับคัดเลือกเข้าทำงาน หรือเข้าศีกษาต่อ
           </p>
         </div>
       </div>
@@ -131,7 +131,7 @@
             excel their portfolio to the fullest that go beyond good but great
           </p>
           <p>
-            มีเพียง 15% เท่านั้นที่คอยพัฒนา Portfolio ของเค้าให้ดีกว่าเดิม
+            แต่มีเพียง 15% เท่านั้น ที่มุ่งพัฒนา Portfolio ให้สุดยอด และดีเกินระดับธรรมดาเดิมๆ แต่กลายเป็นPortfolioระดับเทพ
           </p>
         </div>
       </div>
