--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -322,7 +322,7 @@
           <li>
             <b>ทำไมแค่ 3 เดือน?</b>
             <br>
-            Portfolio ควรและอาจจะมีการอัพเดทในระยะ 3 เดือน ทางเราจึงไม่มีความจำเป็นจะต้องเก็บไว้เกิน ระยะเวลาดังกล่าว เพราะเราต้องการ Review เวอชั่นล่าสุดของ Portfolio คุณเท่านั้น ทั้งนี้ทาง DreamAction คิดว่า ระยะเวลา 3 เดือนเป็นช่วงเวลามีความเหมาะสมต่อการพัฒนา Portfolioของคุณ
+            Portfolio ควรและอาจจะมีการอัพเดทในระยะ 3 เดือน ทางเราจึงไม่มีความจำเป็นจะต้องเก็บไว้เกิน ระยะเวลาดังกล่าว เพราะเราต้องการ Review เวอชั่นล่าสุดของ Portfolio คุณเท่านั้น ทั้งนี้ทาง DreamAction คิดว่า ระยะเวลา 3 เดือนเป็นช่วงเวลามีความเหมาะสมต่อการพัฒนา Portfolio โดยทั่วไป
           </li>
           <br>
           <li>
