--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -106,7 +106,7 @@
           </p>
 
           <p>
-            90% ของนักออกแบบ ใช้ Portfolioของตัวเอง ในการได้รับคัดเลือกเข้าทำงาน หรือเข้าศีกษาต่อ
+            90% ของนักออกแบบได้รับคัดเลือกเข้าทำงานหรือเข้าศีกษาต่อเพราะ Portfolio ของตัวเอง
           </p>
         </div>
       </div>
@@ -131,7 +131,7 @@
             excel their portfolio to the fullest that go beyond good but great
           </p>
           <p>
-            แต่มีเพียง 15% เท่านั้น ที่มุ่งพัฒนา Portfolio ให้สุดยอด และดีเกินระดับธรรมดาเดิมๆ แต่กลายเป็นPortfolioระดับเทพ
+            แต่มีเพียง 15% เท่านั้นที่มุ่งพัฒนา Portfolio ให้สุดยอด และดีเกินระดับบ้านๆ จนกลายเป็น Portfolio ระดับเทพ
           </p>
         </div>
       </div>
