--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -184,7 +184,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6 text-xs-center">
+      <div class="col-md-4 text-xs-center">
         <img src="/assets/images/jump.jpeg" class="rounded-circle"  width="100px" alt="" />
         <br>
         <br>
@@ -218,7 +218,7 @@
           การเข้าคอร์สนี้ถือว่าเป็นการตัดสินใจที่ถูกมากๆสำหรับเราเพราะการนั่งทำพอร์ทคนเดียวมันทำให้งานมันไม่พัฒนาขึ้นเลยแต่พอมีพี่จอมที่เค้ามีประสบการณ์ด้านนี้โดยตรงมันทำให้เรารู้ว่างานของเราและตัวเราเองสามารถพัฒนาข้ามขีดจำกัดของตัวเองได้จริงๆ แล้วที่สำคัญคือเราไม่ท้อ เพราะมีพี่จอมที่คอยเป็นที่ปรึกษาให้ตลอดเวลาเลย :)
         </p>
       </div>
-      <div class="col-md-6 text-xs-center">
+      <div class="col-md-4 text-xs-center">
         <img src="/assets/images/qiaochen.jpg" class="rounded-circle"  width="100px" alt="" />
         <br>
         <br>
@@ -241,7 +241,7 @@
         </p>
       </div>
 
-      <!-- <div class="col-md-4 text-xs-center">
+      <div class="col-md-4 text-xs-center">
         <img src="/assets/images/aui.jpg" class="rounded-circle"  width="100px" alt="" />
         <br>
         <br>
@@ -254,10 +254,19 @@
         <br>
 
         <p class="text-xs-left">
-          I'm having an evolutionary growth with Jom's guide. From graphic styles to ways of thinking, I'm learning from this role model.
-          Thanks for the Portfolio sessions, I improved the graphic consistency and clarified ideas' illustration in my portfolio. My work efficiency, also, get increased after gaining a better understanding about project management from her. We contacted via email, phones and face-to-face meetings to compromise our tight schedules. In respect to her dedications, I can do nothing but keep going forward, carrying out all I learn through my practice.
+          First of all, Thank you for P’jom to establish this great program, Portfolio Review. I decided to join because I want to get feedback and constructive criticism from professional. Not only improving my portfolio, but also getting useful tips from P’Jom in the way of thinking that allow me to see my own projects in different perspectives.
+          <br>
+          <br>
+          In my opinion, portfolio is a great tool that reflect who I am, how I work and how I express my ideas.. To create success portfolio, one important key that I learned from P’jom is storytelling, how to be concise and highlight each project that will get attention from the readers.
+          <br>
+          <br>
+          I would like to say “Thank You” for P’Jom with her great inspiration and support, I got my new portfolio that lead my way to work in a place where I want to be.
+
+          <br>
+          <br>
+          (Sign up Now!!!)
         </p>
-      </div> -->
+      </div>
     </div>
   </div>
 </div>
